# astro-chart-generator-

./: .gitignore  .python-version  GEMINI.md  PROJECT_SUMMARY.md  SETUP.md  docker-compose.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
backend/: .python-version  .ruffignore  Dockerfile  pyproject.toml  requirements.txt
backend/src/: __init__.py
backend/src/api/: __init__.py  main.py
backend/src/core/: __init__.py  calculations.py
backend/src/models/: __init__.py  chart.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py  test_api.py
backend/tests/unit/: __init__.py  test_calculations.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: app.spec.js
frontend/src/: App.jsx  i18n.js  index.css  main.jsx
frontend/src/components/: ErrorBoundary.css  ErrorBoundary.jsx  NatalChart.css  NatalChart.jsx  PositionsTable.css  PositionsTable.jsx
frontend/src/pages/: ChartPage.css  ChartPage.jsx
frontend/src/services/: api.js
specs/001-personal-astro-chart/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-personal-astro-chart/checklists/: requirements.md
specs/001-personal-astro-chart/contracts/: openapi.json
specs/002-complete-astro-chart/: REFINEMENT_SUMMARY.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-complete-astro-chart/checklists/: requirements.md
specs/002-complete-astro-chart/contracts/: openapi.json
(+1 files in other folders)
